# food_agent

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: migrate_sse_recovery.py  migrate_turn_id.py
src/api/: README.md  deps.py  favorites.py  help.py  history.py  main.py  openai_compat.py  routes.py  schemas.py  search.py  user.py
src/scripts/: migrate_favorites.py
src/xhs_food/: __init__.py  events.py  orchestrator.py  schemas.py  state.py
src/xhs_food/agents/: README.md  __init__.py  analyzer.py  intent_parser.py  poi_enricher.py
src/xhs_food/di/: __init__.py  factories.py
src/xhs_food/prompts/: __init__.py  prompts.py
src/xhs_food/protocols/: __init__.py  mcp.py
src/xhs_food/providers/: __init__.py  xhs_providers.py
src/xhs_food/services/: README.md  __init__.py  llm_service.py  postgres_storage.py  preprocessing.py  redis_memory.py  scoring.py  session_manager.py  user_storage.py
src/xhs_food/spider/: README.md  __init__.py
src/xhs_food/spider/apis/: __init__.py  amap_api.py  xhs_pc_apis.py
src/xhs_food/spider/core/: __init__.py  config.py  logger.py
src/xhs_food/spider/datas/: request_log.db
src/xhs_food/spider/services/: __init__.py  xhs_service.py
src/xhs_food/spider/xhs_utils/: __init__.py  common_util.py  xhs_util.py
tests/: test_basic.py  test_calculation_standalone.py  test_comment_processing.py  test_config.py  test_dialogue.py  test_session.py
